test/conformance/chainsaw/reports/background/verify-image-pass/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: signed
spec:
  containers:
  - image: ghcr.io/kyverno/test-verify-image:signed
    name: test-secret
