test/conformance/chainsaw/reports/background/verify-image-pass/pod-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: signed
