test/conformance/chainsaw/reports/background/verify-image-pass/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: keyed-basic-policy
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
