test/conformance/chainsaw/reports/background/verify-image-pass/report-assert.yaml
apiVersion: wgpolicyk8s.io/v1beta1
kind: PolicyReport
metadata:
  ownerReferences:
  - apiVersion: v1
    kind: Pod
    name: signed
scope:
  apiVersion: v1
  kind: Pod
  name: signed
summary:
  error: 0
  fail: 0
  pass: 1
  skip: 0
  warn: 0
