test/conformance/chainsaw/reports/background/verify-image-pass/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: verify-image-pass
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: pod.yaml
    - assert:
        file: pod-assert.yaml
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../_step-templates/policy-ready.yaml
      with:
        bindings:
        - name: name
          value: keyed-basic-policy
  - name: step-03
    try:
    - assert:
        file: report-assert.yaml
